added the swagger puts for task
