# api/controllers/timebot_task.js
@@ -25,8 +25,7 @@ var util = require('util');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-  task: task,
-  hello: hello
+  taskput: taskput,
 };
 
 /*
@@ -35,20 +34,10 @@ module.exports = {
   Param 1: a handle to the request object
   Param 2: a handle to the response object
  */
-function hello(req, res) {
+
+function taskput(req, res) {
   // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello, %s!', name);
-
-  // this sends back a JSON response which is a single string
-  res.json(hello);
-}
-
-function task(req, res) {
-  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Helloo, %s!', name);
-
-  // this sends back a JSON response which is a single string
-  res.json(hello);
+  //console.log(res);
+  console.log(req.swagger.params.name.value);
+  res.json(req.swagger.params);
 }
